# ai-powered-api-document-generator

./: .gitignore  LICENSE.md  README.md  dprint.json  justfile  pyproject.toml  ruff.toml
src/: common.py  main.py  server.py  utils.py
src/api/: base_router.py  openapi_router.py
src/api/v1/: routers.py
src/api/v1/endpoints/: document.py  user.py
src/db/: database.py
src/db/models/: user_models.py
src/services/: base_service.py  user_service.py
